# chat-actor

./: .gitignore  Cargo.toml  Dockerfile  README.md  cleanup.sh  deploy.sh  metrics.sh  package-lock.json  package.json  pnpm-lock.yaml  stress-test.sh
autoscaling/: websocket-hpa.yaml
config/: postgres-init-scripts.yaml  websocket-config.yaml
deployments/: frontend-deployment.yaml  metrics-server.yaml  postgres-deployment.yaml  webserver-deployment.yaml  websocket-deployment.yaml
ingress/: websocket-ingress.yaml
monitoring/: service-monitor.yaml
redis/: redis-deployment.yaml
services/: frontend-service.yaml  webserver-service.yaml  websocket-service.yaml
webserver/: Cargo.toml  Dockerfile  docker-compose.yml
webserver/migrations/: 20250524_create_messages.sql
webserver/src/: main.rs
website/: Dockerfile  package-lock.json  package.json
website/src/: App.tsx
website/src/assets/css/: chat.css  loadingPage.css  nameInput.css
website/src/hooks/: useWebSocket.ts
website/src/pages/: chatPage.tsx  loadingPage.tsx  nameInputPage.tsx
websocket/: Cargo.toml
websocket/src/: dynamic_relay_balancer.rs  load_balancer.rs  main.rs  redis_cluster.rs
websocket/src/actors/: mod.rs  redis_manager.rs  relay.rs  ws.rs
