[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = "0.6"
tokio      = { version = "1.28", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "compression-gzip", "set-header"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"