[package]
name = "chat_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros", "time"] }
dotenv = "0.15"
time = { version = "0.3", features = ["serde"] }

[package.metadata.sqlx]
migrations = ["migrations"]
