[package]
name = "websocket"
version = "0.1.0"
edition.workspace = true

[dependencies]
actix-web = { version = "4.11.0" }
actix-web-actors = { version = "4.3.1" }
actix = { version = "0.13.5" }

tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "macros"] }
bytestring = "1.4.0"
serde_json = { version = "1.0.140" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }