[package]
name = "websocket"
version = "0.1.0"
edition.workspace = true

[dependencies]
actix-web = { version = "4.11.0" }
actix-web-actors = { version = "4.3.1" }
actix = { version = "0.13.5" }

tokio = { version = "1", features = ["full"] }
bytestring = "1.4.0"
serde_json = { version = "1.0.140" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
redis = { version = "0.31.0", features = ["tokio-comp", "aio", "async-std-comp", "cluster-async", "json"] }
futures-util = "0.3.31"
env_logger = "0.11.0"
log = "0.4.22"
sysinfo = "0.32.0"